query builder implemenation and additional types

--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -6,3 +6,4 @@ huh.filter.placeholder.input_label: '%label% eingeben'
 huh.filter.label.submit: Absenden
 huh.filter.label.search: Suche
 huh.filter.label.search_action: Suchen
+huh.filter.label.reset: Zurücksetzen
