--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -11,3 +11,8 @@ huh.filter.label.submit: Submit
 huh.filter.label.search: Search
 huh.filter.label.search_action: Search
 huh.filter.label.reset: Reset
+
+# input group append/prepend text
+huh.filter.input_group_text.fa_clock_o: '<span class="fa fa-clock-o"></span>'
+huh.filter.input_group_text.fa_calendar: '<span class="fa fa-calendar"></span>'
+huh.filter.input_group_text.fa_envelope: '<span class="fa fa-envelope"></span>'
