--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -21,6 +21,8 @@ huh.filter.label.reset: Zurücksetzen
 huh.filter.input_group_text.fa_clock_o: '<span class="fa fa-clock-o"></span>'
 huh.filter.input_group_text.fa_calendar: '<span class="fa fa-calendar"></span>'
 huh.filter.input_group_text.fa_envelope: '<span class="fa fa-envelope"></span>'
+huh.filter.input_group_text.fa_at: '<span class="fa fa-at"></span>'
+huh.filter.input_group_text.button.fa_at: '<button class="btn btn-outline-secondary" type="button"><i class="fa fa-at"></i></button>'
 huh.filter.input_group_text.button.fa_clock_o: '<button class="btn btn-outline-secondary" type="button"><i class="fa fa-clock-o"></i></button>'
 huh.filter.input_group_text.button.fa_calendar: '<button class="btn btn-outline-secondary" type="button"><i class="fa fa-calendar"></i></button>'
 huh.filter.input_group_text.button.fa_envelope: '<button class="btn btn-outline-secondary" type="button"><i class="fa fa-envelope"></i></button>'
