--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -21,3 +21,14 @@ huh.filter.label.reset: Reset
 huh.filter.input_group_text.fa_clock_o: '<span class="fa fa-clock-o"></span>'
 huh.filter.input_group_text.fa_calendar: '<span class="fa fa-calendar"></span>'
 huh.filter.input_group_text.fa_envelope: '<span class="fa fa-envelope"></span>'
+huh.filter.input_group_text.fa_search: '<span class="fas fa-search"></span>'
+huh.filter.input_group_text.button.fa_at: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-at"></i></button>'
+huh.filter.input_group_text.button.fa_calendar: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-calendar"></i></button>'
+huh.filter.input_group_text.button.fa_clock_o: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-clock"></i></button>'
+huh.filter.input_group_text.button.fa_envelope: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-envelope"></i></button>'
+huh.filter.input_group_text.button.fa_search: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>'
+huh.filter.input_group_text.submit.fa_at: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-at"></i></button>'
+huh.filter.input_group_text.submit.fa_calendar: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-calendar"></i></button>'
+huh.filter.input_group_text.submit.fa_clock_o: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-clock"></i></button>'
+huh.filter.input_group_text.submit.fa_envelope: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-envelope"></i></button>'
+huh.filter.input_group_text.submit.fa_search: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>'
