--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -30,6 +30,11 @@ huh.filter.input_group_text.button.fa_calendar: '<button class="btn btn-outline-
 huh.filter.input_group_text.button.fa_clock_o: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-clock"></i></button>'
 huh.filter.input_group_text.button.fa_envelope: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-envelope"></i></button>'
 huh.filter.input_group_text.button.fa_search: '<button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>'
+huh.filter.input_group_text.submit.fa_at: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-at"></i></button>'
+huh.filter.input_group_text.submit.fa_calendar: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-calendar"></i></button>'
+huh.filter.input_group_text.submit.fa_clock_o: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-clock"></i></button>'
+huh.filter.input_group_text.submit.fa_envelope: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-envelope"></i></button>'
+huh.filter.input_group_text.submit.fa_search: '<button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>'
 
 # placeholders
 huh.sort.text.desc: 'Ergebnisse sortieren: %field% (Absteigend)'
