--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -44,3 +44,7 @@ huh.sort.text.default: 'Ergebnisse sortieren: %field%'
 
 huh.sort.DESC: Absteigend
 huh.sort.ASC: Aufsteigend
+
+# Labels for options with count
+huh.filter.option_count:
+  default: '{0} %value% (Keine Einträge)|{1} %value% (Ein Eintrag)|[2,Inf[ %value% (%count% Einträge)'
