added revise options and adjust option labels

--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -45,6 +45,10 @@ huh.sort.text.default: 'Ergebnisse sortieren: %field%'
 huh.sort.DESC: Absteigend
 huh.sort.ASC: Aufsteigend
 
+# option patterns
+huh.filter.option_label.label: '%label%'
+huh.filter.option_label.label_count: '%label% (%count%)'
+
 # Labels for options with count
 huh.filter.option_count:
   default: '{0} %value% (Keine Einträge)|{1} %value% (Ein Eintrag)|[2,Inf[ %value% (%count% Einträge)'
