--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -19,6 +19,7 @@ huh.filter.label.filter_action: Filtern
 huh.filter.label.filter_action_colon: 'Filtern:'
 huh.filter.label.filter_period_colon: 'Zeitraum:'
 huh.filter.label.reset: Zurücksetzen
+huh.filter.label.reset_filter: Filter zurücksetzen
 huh.filter.label.groupChoice: Alle
 
 # input group append/prepend text
