--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -20,6 +20,7 @@ huh.filter.label.filter_action_colon: 'Filtern:'
 huh.filter.label.filter_period_colon: 'Zeitraum:'
 huh.filter.label.reset: Zurücksetzen
 huh.filter.label.reset_filter: Filter zurücksetzen
+huh.filter.label.current_location: Aktueller Standort
 huh.filter.label.groupChoice: Alle
 
 # input group append/prepend text
