added option to hide filter module if auto_item is set

--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -1,5 +1,6 @@
 # placeholders
 huh.filter.placeholder.default: -
+huh.filter.placeholder.input_label_name: '%label%'
 huh.filter.placeholder.input_label: 'Enter %label%'
 huh.filter.placeholder.start: Start
 huh.filter.placeholder.stop: Stop
